--- a/Common/SparseMatrix/Test/SparseMatrixTestFrm.fmx
+++ b/Common/SparseMatrix/Test/SparseMatrixTestFrm.fmx
@@ -1,9 +1,9 @@
-object Form1: TForm1
+object TestForm: TTestForm
   Left = 0
   Top = 0
-  Caption = 'Form1'
-  ClientHeight = 480
-  ClientWidth = 640
+  Caption = 'Test form'
+  ClientHeight = 349
+  ClientWidth = 634
   FormFactor.Width = 320
   FormFactor.Height = 480
   FormFactor.Devices = [dkDesktop, dkiPhone, dkiPad]
@@ -12,4 +12,20 @@ object Form1: TForm1
   DesignerHeight = 0
   DesignerDeviceName = ''
   DesignerOrientation = 0
+  object TestBtn: TButton
+    Height = 22.000000000000000000
+    Position.X = 16.000000000000000000
+    Position.Y = 16.000000000000000000
+    TabOrder = 0
+    Text = 'Test'
+    Width = 80.000000000000000000
+    OnClick = TestBtnClick
+  end
+  object ResultsMemo: TMemo
+    Height = 281.000000000000000000
+    Position.X = 16.000000000000000000
+    Position.Y = 56.000000000000000000
+    TabOrder = 1
+    Width = 609.000000000000000000
+  end
 end
