--- a/Sudoku/Sudoku1/SudokuFrm.fmx
+++ b/Sudoku/Sudoku1/SudokuFrm.fmx
@@ -16,7 +16,7 @@ object SudokuSimpleForm: TSudokuSimpleForm
   DesignerOrientation = 0
   object Grid: TStringGrid
     Align = alClient
-    Height = 268.000000000000000000
+    Height = 223.000000000000000000
     TabOrder = 0
     Width = 339.000000000000000000
     RowCount = 9
@@ -80,5 +80,28 @@ object SudokuSimpleForm: TSudokuSimpleForm
     Filter = '*.xml'
     Left = 24
     Top = 120
+  end
+  object BottomLayout: TLayout
+    Align = alBottom
+    Height = 45.000000000000000000
+    Position.Y = 272.000000000000000000
+    Width = 339.000000000000000000
+    object SimpleSolver: TRadioButton
+      Height = 19.000000000000000000
+      IsChecked = True
+      Position.X = 24.000000000000000000
+      Position.Y = 16.000000000000000000
+      TabOrder = 0
+      Text = 'Use naive solver'
+      Width = 121.000000000000000000
+    end
+    object DLXSolver: TRadioButton
+      Height = 19.000000000000000000
+      Position.X = 168.000000000000000000
+      Position.Y = 16.000000000000000000
+      TabOrder = 1
+      Text = 'Use DLX solver'
+      Width = 120.000000000000000000
+    end
   end
 end
