--- a/Common/MemDB/Test/MemDBTestForm.fmx
+++ b/Common/MemDB/Test/MemDBTestForm.fmx
@@ -91,4 +91,22 @@ object Form1: TForm1
     Width = 80.000000000000000000
     OnClick = FindEdgeTestClick
   end
+  object MFIndexTest: TButton
+    Height = 22.000000000000000000
+    Position.X = 184.000000000000000000
+    Position.Y = 40.000000000000000000
+    TabOrder = 9
+    Text = 'MF Indexes'
+    Width = 80.000000000000000000
+    OnClick = MFIndexTestClick
+  end
+  object MFFKeyTest: TButton
+    Height = 22.000000000000000000
+    Position.X = 272.000000000000000000
+    Position.Y = 40.000000000000000000
+    TabOrder = 10
+    Text = 'MF FKeys'
+    Width = 80.000000000000000000
+    OnClick = MFFKeyTestClick
+  end
 end
