MemDB: Multi-Field Indexes and Foreign keys. (#42)
MemDB: Remove superfluous comment.
MemDB: A nicer fix for range check error.
MemDBTest: Restore imports list to something XE4 understands.
Merge
Revert FMX changes from newer Delphi version.
MemDBTest: Fix range error (XE4 did not range check some int64 ops).
MemDB: Add timing info to testapp. 10K table sizes.
MemDB: Remove unnecessary NdIndexToRawIndex call.
MemDB: Removed unnecessary allocation, & misc functions.
MemDB: Fields in different orders in testapp, improve checking.
MemDB: Removed unnecessary allocs (BuildMultiDataRecs).
IndexedStore: Protect indexing against out of memory case.
MemDB: Remove erroneous comment.
MemDB: Multi-field indexes and FK's. Couple of fixes, test code.
MemDB: Cleanup, and Multi-field index test code.
MemDB: Additional bugfix checking previous field offset code.
MemDB: Bugfix. Passes all existing tests.
MemDB: Multi-field indexes and foreign keys. Compiles.

--- a/Common/MemDB/Test/MemDBTestForm.fmx
+++ b/Common/MemDB/Test/MemDBTestForm.fmx
@@ -7,6 +7,7 @@ object Form1: TForm1
   FormFactor.Width = 320
   FormFactor.Height = 480
   FormFactor.Devices = [dkDesktop, dkiPhone, dkiPad]
+  OnCreate = FormCreate
   DesignerMobile = False
   DesignerWidth = 0
   DesignerHeight = 0
@@ -90,5 +91,23 @@ object Form1: TForm1
     Text = 'Edge test'
     Width = 80.000000000000000000
     OnClick = FindEdgeTestClick
+  end
+  object MFIndexTest: TButton
+    Height = 22.000000000000000000
+    Position.X = 184.000000000000000000
+    Position.Y = 40.000000000000000000
+    TabOrder = 9
+    Text = 'MF Indexes'
+    Width = 80.000000000000000000
+    OnClick = MFIndexTestClick
+  end
+  object MFFKeyTest: TButton
+    Height = 22.000000000000000000
+    Position.X = 272.000000000000000000
+    Position.Y = 40.000000000000000000
+    TabOrder = 10
+    Text = 'MF FKeys'
+    Width = 80.000000000000000000
+    OnClick = MFFKeyTestClick
   end
 end
