--- a/Common/MemDB/Test/MemDBTestForm.fmx
+++ b/Common/MemDB/Test/MemDBTestForm.fmx
@@ -128,4 +128,13 @@ object Form1: TForm1
     Width = 97.000000000000000000
     OnClick = BigTblModClick
   end
+  object ChkBlobs: TButton
+    Height = 22.000000000000000000
+    Position.X = 8.000000000000000000
+    Position.Y = 72.000000000000000000
+    TabOrder = 13
+    Text = 'ChkBlobs'
+    Width = 80.000000000000000000
+    OnClick = ChkBlobsClick
+  end
 end
