--- a/Common/MemDB/Test/MemDBTestForm.fmx
+++ b/Common/MemDB/Test/MemDBTestForm.fmx
@@ -128,13 +128,22 @@ object Form1: TForm1
     Width = 97.000000000000000000
     OnClick = BigTblModClick
   end
-  object ChkBlobs: TButton
+  object TstBlobs: TButton
     Height = 22.000000000000000000
     Position.X = 8.000000000000000000
     Position.Y = 72.000000000000000000
     TabOrder = 13
-    Text = 'ChkBlobs'
+    Text = 'Blob r/w'
     Width = 80.000000000000000000
-    OnClick = ChkBlobsClick
+    OnClick = TstBlobsClick
+  end
+  object MultiTrans: TButton
+    Height = 22.000000000000000000
+    Position.X = 96.000000000000000000
+    Position.Y = 72.000000000000000000
+    TabOrder = 14
+    Text = 'Simul trans'
+    Width = 80.000000000000000000
+    OnClick = MultiTransClick
   end
 end
